# ndi-wayland-screenshare

./: Cargo.toml  LICENSE  README.md
ndi/: Cargo.toml
ndi-sys/: Cargo.toml  build.rs
ndi-sys/src/: wrapper.h
ndi-wayland-screenshare/: Cargo.toml
ndi-wayland-screenshare/src/: main.rs
ndi/src/: lib.rs
